@@ -1,6 +1,8 @@
 master
 ------
 
+        * Added CURLOPT_LOGIN_OPTIONS (libcurl 7.34.0+).
+
         * Added CURLOPT_FTP_USE_PRET (libcurl 7.20.0+).
 
         * Added setopt_string method to Curl objects to set arbitrary
